--- a/style.css
+++ b/style.css
@@ -2,13 +2,16 @@
 
 header{
     background-color: #2874f0;
-    height: 56px;
+    /* height: 56px; */
+    height: max-content;
     width:auto;
     display: flex;
     justify-content: center;
     padding-left: 10%;
     /* padding-right: 10%; */
     margin-top: 0%;
+    flex-wrap: wrap;
+    /* border: 5px solid black; */
 }
 
 
@@ -19,15 +22,17 @@ header{
     margin: auto;
     margin-left: 3px;
     margin-right: 10%;
+    flex-shrink: 5;
 }
 #search-field{
     width: 600px;
     height: 35px;
+    flex-shrink: 5;
 }
 
 #login{
     margin: 10px;
-    margin-left: 10%;
+    margin-left: 5%;
 
 }
 #login-btn{
@@ -42,14 +47,22 @@ header{
     border: none;
 }
 
-#more,#cart{
-    margin: auto 20px;
+#more{
+    margin: auto 2px;
     color: white;
-    padding-left: 2px;
+    padding-left: 2%;
     font-size: 16px;
     font-weight: bold;
 }
 
 #cart{
-    padding-right: 20%;
+    /* display: inline-block; */
+    /* width: max-content; */
+    flex-shrink: 0 ;
+    margin: auto 2%;
+    color: white;
+    padding-left: 2px;
+    font-size: 16px;
+    font-weight: bold;
+ 
 }
