--- a/style.css
+++ b/style.css
@@ -159,7 +159,9 @@ header{
 #view_all{
    /*    margin-right: 50%; */
    /* padding-left: 50rem; */
-   margin-left: 70%; 
+   margin: auto;
+    margin-right: 10px;
+    float: right;
 }
 
 #below-line{
@@ -172,8 +174,19 @@ header{
 }
 
 .deal_img{
-    max-width: 150px;
+    max-width: 140px;
+    
+    /* max-height: 100px */
 }
+#boxing{
+    min-height: 150px;
+}
+
+
+
+
+
+
 
 #advertise{
     height: auto;
@@ -211,10 +224,14 @@ header{
     font-weight: 700;
     flex-wrap: wrap;
     /* margin-right: 0% */
-    margin: auto 0%;
+    margin: auto;
     color: black;
     text-decoration: none;
+    float: none;
 }
+
+
+
 
 .discount{
     color: #388e3c;
@@ -227,7 +244,7 @@ header{
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    width:100px; 
+    /* width:100px;  */
 }
 
 #lower-section{
@@ -237,6 +254,7 @@ header{
     width: 90%;
     /* margin: auto; */
     padding-top: 10px;
+    padding-bottom: 20px;
 }
 
 #lower-first-line{
@@ -273,10 +291,11 @@ header{
 #lower-middle-line{
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
     /* justify-content: space-between; */
 }
 
-#lower-list{
+/* #lower-list{
     display: flex;
     justify-content: space-evenly;
     height: auto;
@@ -284,4 +303,8 @@ header{
     padding-top: 5px;
     padding-bottom: 5px;
     justify-content: space-around;
+} */
+#lower-boxing{
+    min-height: 210px;
 }
+
