--- a/style.css
+++ b/style.css
@@ -14,13 +14,13 @@ header{
     background-color: #2874f0;
     /* height: 56px; */
     height: max-content;
-    /* width:auto; */
+    width:auto;
     display: flex;
     justify-content: center;
     padding-left: 10%;
     /* padding-right: 10%; */
     margin-top: 0%;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     /* border: 5px solid black; */
 }
 
@@ -29,13 +29,14 @@ header{
     max-height: 56px;
 }
 #search{
+    width: 600px;
     margin: auto;
     margin-left: 3px;
     margin-right: 10%;
     flex-shrink: 5;
 }
 #search-field{
-    width: 600px;
+    width: 100%;
     height: 35px;
     flex-shrink: 5;
     background-image: url(https://www.pngarea.com/pngm/109/1164446_searchicon-png-search-icon-png-download.png);
@@ -46,7 +47,7 @@ header{
 }   
 
 #login{
-    margin: 10px;
+    margin: auto 5px;
     margin-left: 5%;
 
 }
@@ -147,7 +148,7 @@ header{
     display: flex;
     padding-top: 10px;
     padding-bottom: 10px;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
 }
 .fl{
     min-width: fit-content;
@@ -190,7 +191,9 @@ header{
 }
 
 
-
+#adv-2-img{
+    display: none;
+}
 
 #advertise{
     height: auto;
@@ -198,12 +201,12 @@ header{
     /* background-color: #792727; */
     float: left;
     margin-left: 1%;
-    text-align: center;
+    /* text-align: center; */
     margin-bottom: 1%;
 }
 
 #adv-img{
-    max-height: 300px;
+    max-height: 270px;
     /* width: auto; */
 }
 
@@ -311,6 +314,9 @@ header{
 #lower-boxing{
     min-height: 210px;
 }
+.lower-img{
+    max-width: 180px;
+}
 
 /* ---------------------------- Hover Effects-------------- */
 .deal_img:hover{
@@ -329,4 +335,9 @@ header{
 }
 #login-btn:hover{
     transform: scale(1.1);
+}
+#below-line::-webkit-scrollbar{
+    height: 4px;              /* height of horizontal scrollbar ← You're missing this */
+    width: 4px;               /* width of vertical scrollbar */
+    border: 1px solid #d5d5d5;
 }
