--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 /*-----------Header---------------*/
 * {
     margin: 0;
+    
+        /* width: 100%; */
+       
+    
 
 }
 
@@ -146,29 +150,98 @@ header{
     
 } */
 
+
+
+
+
+/* 
 #nav-bar{
     display: flex;
     justify-content: space-evenly;
-    /* margin: auto 15%; */
+    width: auto;
+    margin: auto 15%;
     padding: 10px;
     padding-left: 20%;
     padding-right: 20%;
     
-    /* border-bottom: solid black 100%; */
-    background-color: white;
+    border-bottom: solid black 100%;
+    
+    box-sizing: border-box;
+    width: 100%;
+    
+
+  background-color: white;
     box-shadow: 0px 0.5px gray;
+   
 
 }
 
 .nav-item{
     text-align: center;
+    width: 11.11%;
+    float: left;
+    padding: auto 10px;
 }
 
 .nav-image{
     margin: auto;
     max-height: 90px;
     flex-shrink: 3;
+    height: 10%;
+} */
+
+
+
+
+
+#nav-bar{
+    /* width: auto; */
+    width: 100%;
+    height:auto;
+    box-sizing: border-box;
+    
+ 
+    padding: 10px;
+    padding-left: 20%;
+    padding-right: 20%;
+
+
+    background-color: white;
+    box-shadow: 0px 0.5px gray;
+    /* margin: auto 20%; */
+
 }
+
+.nav-item{
+    float: left;
+    width: 11.11%;
+    text-align: center;
+    /* padding-right: 10%; */
+}
+
+.nav-image{
+    width: 100%;
+    max-height: 128px;
+    max-width: 128px;
+}
+
+
+.nav-item{
+    font-size: 0.9rem;
+    word-wrap: break-word;
+}
+
+.clear{
+    clear: both;
+}
+
+
+
+
+
+
+
+
 #main-area{
     /* float: left; */
     width: auto;
