--- a/responsive.css
+++ b/responsive.css
@@ -113,7 +113,7 @@
         max-width: 600px;
     }
     #search-field{
-        width: 100%;
+        width: 90%;
     }
     #dealsOfDay{
         width: 100%;
@@ -148,11 +148,12 @@
     #search{
         min-width: 200px;
         margin: auto;
+        padding-right: 10%;
     }
     header{
         padding-left: 0;
-        flex-wrap: wrap;
-    justify-content: space-around;
+        flex-wrap: nowrap;
+    justify-content: space-between;
     overflow: auto;
     padding: 10px;
     }
@@ -164,13 +165,120 @@
         font-size: 0.7rem;
     }
 
+
+    .open-menu {
+        top: 50%;
+        right: 20px;
+        transform: translateY(-50%);
+    }
+    .close-menu {
+        top: 20px;
+        right: 20px;
+    }
+    #check {display: none;}
+
+    #login,#more,#cart{
+        display: none;
+    }
+
+    .menu {
+        display: block;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 30%;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        right: -100%;
+        z-index: 100;
+        background-color: #2874f0;
+        transition: all 0.2s ease-in-out;
+    }
+    .menu li {
+        
+    text-decoration: none;
+        list-style: none;
+}
+    .menu li a {padding: 10px;
+        text-decoration: none;}
+    .open-menu , .close-menu {display: block;}
+    #check:checked ~.menu {right: 0;}
+
+        .logo-1{
+            margin: 20% 20%;
+            margin-top: 40%;
+        }
+        #header-image{
+            margin: auto;
+        }
+
+        #login-btn{
+            margin:0% 20%;
+            /* margin-top: 60px;
+            margin-bottom: 30px; */
+            /* height: auto; */
+            width: 60%;
+        }
+        #more-1{
+            margin: auto;
+            margin: 10px 20%;
+            
+            color: #ffffff;
+            border: none;
+          outline: none;
+          background-color: inherit;
+          /* font-size: 16px; */
+          font-weight: bold;
+          text-decoration: none;
+
+        }
+        .dropbtn{
+            color: #ffffff;
+            border: none;
+          outline: none;
+          background-color: inherit;
+          font-size: 16px;
+          font-weight: bold;
+          text-decoration: none;
+        
+        }
+        .dropdown-content{
+            background-color:#2874f0;
+        }
+        #more-1:hover .dropdown-content {
+            display: block;
+          }
+
+        #cart-1{
+            margin: auto;
+            margin: 30px 20%;
+            margin-left: 15%;
+
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .fa{
+            color: white;
+        }
+        #cart-1 a{
+            color: white;
+        }
+
+
+
+
+
+
 }
 
-@media (max-width: 205px){
+
+/* @media (max-width: 205px){
     #search{
         min-width: 100%;
     }
-}
+} */
 
 @media (max-width: 460px){
     #view_all{
