--- a/style.css
+++ b/style.css
@@ -4,8 +4,6 @@
     
         /* width: 100%; */
        
-    
-
 }
 
 
@@ -27,6 +25,7 @@ header{
     padding-left: 10%;
     /* padding-right: 10%; */
     margin-top: 0%;
+
     /* flex-wrap: wrap; */
     /* border: 5px solid black; */
 }
@@ -50,6 +49,8 @@ header{
     background-size: 20px;
     background-repeat: no-repeat;
     background-position: 99%;
+    border-radius: 2px;
+    box-shadow: 0 2px 4px 0 rgb(0 0 0 / 23%);
     
 }   
 
@@ -69,6 +70,54 @@ header{
     /* box-shadow: none; */
     border: none;
 }
+
+#fashion{
+    text-decoration: none;
+    outline: none;
+    border: none;
+}
+#fashion:hover .dropdown-content-f {
+    display: block;
+  }
+
+.dropbtn-f{
+
+    border: none;
+  outline: none;
+  background-color: inherit;
+  /* font-size: 16px;
+  font-weight: bold; */
+  text-decoration: none;
+}
+
+.dropdown-content-f{
+    color: black;
+    display: none;
+    position: absolute;
+    min-width: fit-content;
+    font-weight: lighter;
+    background-color: #ffffff;
+    z-index: 1;
+
+}
+
+.dropdown-content-f a {
+    float: none;
+    color: rgb(0, 0, 0);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  .dropdown-content-f a:hover {
+    background-color: #ffffff;
+    color: #2874f0;
+  }
+
+
+
+
+
 
 #more{
     margin: auto 2px;
@@ -96,24 +145,26 @@ header{
 }
 
 .dropdown-content{
+    color: black;
     display: none;
     position: absolute;
     min-width: fit-content;
-    background-color: #2874f0;
+    font-weight: lighter;
+    background-color: #ffffff;
     z-index: 1;
 
 }
 
 .dropdown-content a {
     float: none;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
   }
   .dropdown-content a:hover {
-    background-color: rgb(0, 0, 0);
+    background-color: #2874f0;
   }
 
   #more:hover .dropdown-content {
@@ -460,6 +511,33 @@ header{
 }
 
 
+
+#tg-menu{
+    position: relative;
+    
+}
+
+.menu{
+    display: none;
+}
+
+.open-menu , .close-menu {
+    position: absolute;
+    color: white;
+    cursor: pointer;
+    font-size: 1.5rem;
+    display: none;
+}
+.open-menu {
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+}
+.close-menu {
+    top: 20px;
+    right: 20px;
+}
+#check {display: none;}
 
 
 
