--- a/responsive.css
+++ b/responsive.css
@@ -1,21 +1,8 @@
 @media (max-width :1379px){
-    /* #below-line{
-        justify-content: space-evenly;
-        flex: 2 9 50%;
-    } */
-
-    #dealsOfDay{
-        /* width: 100%; */
-    }
-
-
     #search{
         max-width: 600px;
         margin: auto;
         margin-left: 3px ;
-    }
-    #login{
-        /* margin: 10px; */
     }
     #more{
         padding-left: 0;
@@ -28,11 +15,7 @@
     }
 
     #below-line::-webkit-scrollbar{
-        
-        /* background-color: #aaa; */
         height: 8px;              
-        /* width: 20px;             */
-        
     }
     #below-line::-webkit-scrollbar-track{
         border-radius: 10px;
@@ -42,17 +25,7 @@
     #below-line::-webkit-scrollbar-thumb{
         background: #2874f0;
         border-radius: 10px;
-
-
     }
-    /* #below-line::-webkit-scrollbar-button{
-        color: aliceblue;
-        background-color: rgb(226, 34, 27);
-        height: 10px;              
-        width: 4px;     
-    } */
-   
-
     #lower-middle-line{
         max-width: inherit;
         flex-wrap: nowrap;
@@ -62,11 +35,7 @@
     }
 
     #lower-middle-line::-webkit-scrollbar{
-        
-        /* background-color: #aaa; */
-        height: 8px;              
-        /* width: 20px;             */
-        
+        height: 8px;         
     }
     #lower-middle-line::-webkit-scrollbar-track{
         border-radius: 10px;
@@ -76,16 +45,9 @@
     #lower-middle-line::-webkit-scrollbar-thumb{
         background: #2874f0;
         border-radius: 10px;
-
-
     }
-  
 }
-/* @media (min-width: 1024px) and (max-width :1379px){
-    #dealitem7, #lower-items7,#lower-items3{ 
-        display: none;
-    }
-} */
+
 
 @media (max-width: 1024px){
 
@@ -105,12 +67,7 @@
     #dealsOfDay{
         width: 100%;
     }
-    /* #nav-bar{
-        justify-content: center;
-        flex-wrap: nowrap;
-        padding: 10px;
-        overflow: auto;
-    } */
+
     #adv-2-img{
         display: inline;
         width: 100%;
@@ -122,9 +79,7 @@
     #advertise{
         display: flex;
         justify-content: center;
-        /* text-align: center; */
         width: 100%;
-        /* margin-left: 40%; */
         float: none;
         margin-left: 0;
     }
@@ -140,9 +95,9 @@
     header{
         padding-left: 0;
         flex-wrap: nowrap;
-    justify-content: space-between;
-    overflow: auto;
-    padding: 10px;
+        justify-content: space-between;
+        overflow: auto;
+        padding: 10px;
     }
     #nav-bar{
         padding-left: 10px;
@@ -183,14 +138,19 @@
         transition: all 0.2s ease-in-out;
     }
     .menu li {
-        
-    text-decoration: none;
+        text-decoration: none;
         list-style: none;
 }
-    .menu li a {padding: 10px;
-        text-decoration: none;}
-    .open-menu , .close-menu {display: block;}
-    #check:checked ~.menu {right: 0;}
+    .menu li a {
+        padding: 10px;
+        text-decoration: none;
+    }
+    .open-menu , .close-menu {
+        display: block;
+    }
+    #check:checked ~.menu {
+        right: 0;
+    }
 
         .logo-1{
             margin: 20% 20%;
@@ -202,32 +162,27 @@
 
         #login-btn{
             margin:0% 20%;
-            /* margin-top: 60px;
-            margin-bottom: 30px; */
-            /* height: auto; */
             width: 60%;
         }
         #more-1{
             margin: auto;
             margin: 10px 20%;
-            
             color: #ffffff;
             border: none;
-          outline: none;
-          background-color: inherit;
-          /* font-size: 16px; */
-          font-weight: bold;
-          text-decoration: none;
+            outline: none;
+            background-color: inherit;
+            font-weight: bold;
+            text-decoration: none;
 
         }
         .dropbtn{
             color: #ffffff;
             border: none;
-          outline: none;
-          background-color: inherit;
-          font-size: 16px;
-          font-weight: bold;
-          text-decoration: none;
+            outline: none;
+            background-color: inherit;
+            font-size: 16px;
+            font-weight: bold;
+            text-decoration: none;
         
         }
         .dropdown-content{
