--- a/style.css
+++ b/style.css
@@ -1,35 +1,21 @@
-/*-----------Header---------------*/
+
 * {
-    margin: 0;
-    
-        /* width: 100%; */
-       
+    margin: 0;    
 }
-
-
-
-/* .container{
-    background-color: black;
-} */
 
 body{
     background-color: #f1f3f6;
 }
+/* Header Section*/
 header{
     background-color: #2874f0;
-    /* height: 56px; */
     height: max-content;
     width:auto;
     display: flex;
     justify-content: center;
     padding-left: 10%;
-    /* padding-right: 10%; */
     margin-top: 0%;
-
-    /* flex-wrap: wrap; */
-    /* border: 5px solid black; */
 }
-
 
 #header-image{
     max-height: 56px;
@@ -51,7 +37,6 @@ header{
     background-position: 99%;
     border-radius: 2px;
     box-shadow: 0 2px 4px 0 rgb(0 0 0 / 23%);
-    
 }   
 
 #login{
@@ -60,17 +45,14 @@ header{
 
 }
 #login-btn{
-    /* padding: auto; */
     height: 35px;
     width: 125px;
     background-color: white;
     color: #2874f0;
     font-size: 16px;
     font-weight: bold;
-    /* box-shadow: none; */
     border: none;
 }
-
 #fashion{
     text-decoration: none;
     outline: none;
@@ -81,13 +63,10 @@ header{
   }
 
 .dropbtn-f{
-
     border: none;
-  outline: none;
-  background-color: inherit;
-  /* font-size: 16px;
-  font-weight: bold; */
-  text-decoration: none;
+    outline: none;
+    background-color: inherit;
+    text-decoration: none;
 }
 
 .dropdown-content-f{
@@ -98,7 +77,6 @@ header{
     font-weight: lighter;
     background-color: #ffffff;
     z-index: 1;
-
 }
 
 .dropdown-content-f a {
@@ -109,10 +87,12 @@ header{
     display: block;
     text-align: left;
   }
-  .dropdown-content-f a:hover {
+
+.dropdown-content-f a:hover {
     background-color: #ffffff;
     color: #2874f0;
   }
+
 #more{
     margin: auto 2px;
     color: white;
@@ -132,7 +112,6 @@ header{
   font-size: 16px;
   font-weight: bold;
   text-decoration: none;
-
 }
 
 .dropdown-content{
@@ -143,7 +122,6 @@ header{
     font-weight: lighter;
     background-color: #ffffff;
     z-index: 1;
-
 }
 
 .dropdown-content a {
@@ -153,18 +131,16 @@ header{
     text-decoration: none;
     display: block;
     text-align: left;
-  }
-  .dropdown-content a:hover {
+ }
+.dropdown-content a:hover {
     background-color: #2874f0;
-  }
+}
 
-  #more:hover .dropdown-content {
+#more:hover .dropdown-content {
     display: block;
-  }
+}
 
 #cart{
-    /* display: inline-block; */
-    /* width: max-content; */
     flex-shrink: 0 ;
     margin: auto 2%;
     color: white;
@@ -172,93 +148,23 @@ header{
     font-size: 16px;
     font-weight: bold;
     text-decoration: none;
- 
 }
-
-
-/* Making box layout, color height etc given for that */
-/* #nav-bar{
-    background-color: red;
-    height: 100px;
-    width: auto;
-    display: flex;
-    justify-content: space-between;
-}
-
-.nav-item{
-    color: beige;
-    background-color: black;
-    
-    
-} */
-
-
-
-
-
-/* 
+/* Navigation Section*/
 #nav-bar{
-    display: flex;
-    justify-content: space-evenly;
-    width: auto;
-    margin: auto 15%;
-    padding: 10px;
-    padding-left: 20%;
-    padding-right: 20%;
-    
-    border-bottom: solid black 100%;
-    
-    box-sizing: border-box;
-    width: 100%;
-    
-
-  background-color: white;
-    box-shadow: 0px 0.5px gray;
-   
-
-}
-
-.nav-item{
-    text-align: center;
-    width: 11.11%;
-    float: left;
-    padding: auto 10px;
-}
-
-.nav-image{
-    margin: auto;
-    max-height: 90px;
-    flex-shrink: 3;
-    height: 10%;
-} */
-
-
-
-
-
-#nav-bar{
-    /* width: auto; */
     width: 100%;
     height:auto;
     box-sizing: border-box;
-    
- 
     padding: 10px;
     padding-left: 20%;
     padding-right: 20%;
-
-
     background-color: white;
     box-shadow: 0px 0.5px gray;
-    /* margin: auto 20%; */
-
 }
 
 .nav-item{
     float: left;
     width: 11.11%;
     text-align: center;
-    /* padding-right: 10%; */
 }
 
 .nav-image{
@@ -266,7 +172,6 @@ header{
     max-height: 128px;
     max-width: 128px;
 }
-
 
 .nav-item{
     font-size: 0.9rem;
@@ -278,7 +183,6 @@ header{
 }
 
 #main-area{
-    /* float: left; */
     width: auto;
     margin: 1% 5%;
 }
@@ -293,7 +197,6 @@ header{
 }
 
 #front-line{
-    /* border-bottom: black 1px solid; */
     box-shadow: 0px 0.5px gray;
     display: flex;
     padding-top: 10px;
@@ -309,14 +212,11 @@ header{
 #demo{
     display: inline;
     text-align: center;
-  /* font-size: 20px; */
   margin-top: 0px;
 
 }
 
 #view_all{
-   /*    margin-right: 50%; */
-   /* padding-left: 50rem; */
    margin: auto;
     margin-right: 10px;
     float: right;
@@ -333,31 +233,24 @@ header{
 
 .deal_img{
     max-width: 140px;
-    
-    /* max-height: 100px */
 }
 #boxing{
     min-height: 150px;
 }
-
-
 #adv-2-img{
     display: none;
 }
-
+/* Advertise Section*/
 #advertise{
     height: auto;
     width: 18%;
-    /* background-color: #792727; */
     float: left;
     margin-left: 1%;
-    /* text-align: center; */
     margin-bottom: 1%;
 }
 
 #adv-img{
     max-height: 270px;
-    /* width: auto; */
 }
 
 #desc-line{
@@ -376,11 +269,9 @@ header{
     white-space: nowrap;
     overflow: hidden;
     width:100px; 
-    /* max-width: min-content; */
     font-size: 14px;
     font-weight: 700;
     flex-wrap: wrap;
-    /* margin-right: 0% */
     margin: auto;
     color: black;
     text-decoration: none;
@@ -398,34 +289,28 @@ header{
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    /* width:100px;  */
 }
-
+/* Detail product Section */
 #lower-section{
-    /* display: block; */
     background-color: rgb(255, 255, 255);
     overflow: hidden;
     width: 99%;
-    /* margin: auto; */
     padding-top: 10px;
     padding-bottom: 20px;
 }
 
 #lower-first-line{
-  
     margin-bottom: 10px;
     box-shadow: 0px 0.5px gray;
     padding-bottom: 10px;
     padding-left: 20px;
     padding-right: 20px;
-
 }
 #lower-heading{
     display: inline;
 }
 #lower-view-btn{
     float: right;
-    /* padding-right: 10px; */
 }
 
 .ref-link{
@@ -436,7 +321,6 @@ header{
 
 .view-bt{
     padding: 12px 20px;
-    /* margin: auto; */
     background-color: #2874f0;
     color: white;
     border: none;
@@ -446,18 +330,8 @@ header{
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    /* justify-content: space-between; */
 }
 
-/* #lower-list{
-    display: flex;
-    justify-content: space-evenly;
-    height: auto;
-    align-items: center;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    justify-content: space-around;
-} */
 #lower-boxing{
     min-height: 210px;
 }
@@ -465,7 +339,8 @@ header{
     max-width: 180px;
 }
 
-/* ---------------------------- Hover Effects-------------- */
+/* Hover Section*/
+
 .deal_img:hover{
     transform: scale(1.5);
 }
@@ -488,10 +363,8 @@ header{
     width: 4px;               
     border: 1px solid #d5d5d5;
 }
-
 #tg-menu{
     position: relative;
-    
 }
 
 .menu{
